--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="container">
       <div class="row">
         <div class="about-col-1">
-          <img src="images/my image.jpg" alt="" style="padding-right: 20px;">
+          <img src="images/My image.jpg" alt="" style="padding-right: 20px;">
 
         </div>
         <div class="about-col-2">
